--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@
   font-family: "Montserrat", sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.tdflex{
+  display: flex;
+}
